# marduk

./: .gitattributes  .gitignore  ASSETS.md  ASSETS_NEEDED.md  AUTONOMOUS_QUEUE.md  BREATHING.md  CHARACTER_DESIGN.md  CLOUDFLARE_DEPLOY.md  DEMON_VISUAL_TRANSFORMATION.md  EQUIPMENT_VISUAL.md  LICENSE  MISSING_ANIMS.md  MIXAMO_FIX_RESEARCH.md  README.md  RETARGET_GUIDE.md  ROADMAP.md  STORY.md  WORLD_ALIVE.md  project.godot
.claude/agents/: marduk-dev.md
assets/animations/: README.md
backend/: README.md  package.json  tsconfig.json  wrangler.toml
backend/migrations/: 0001_init.sql
backend/src/: index.ts
blender/scripts/: generate_placeholders.py
launcher/: README.md  package.json
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: auth.rs  builds.rs  launcher.rs  main.rs
launcher/ui/: index.html
resources/races/: anunnaki.tres  ash_born.tres  mountain_forged.tres  reed_walker.tres  wound_marked.tres
scenes/: main.tscn
scenes/enemies/: boss_base.tscn  enemy_base.tscn
scenes/menus/: character_creation.tscn  pause_menu.tscn  (+4 more)
scripts/: prestige.gd  prestige.gd.uid  save_flags.gd  save_flags.gd.uid
shaders/: rim_pass.gdshader  rim_pass.gdshader.uid  telegraph.gdshader  telegraph.gdshader.uid  toon.gdshader  toon.gdshader.uid  water_pond.gdshader  water_pond.gdshader.uid  wind.gdshader  wind.gdshader.uid
tools/: inspect_anim.gd  inspect_anim.gd.uid  inspect_collision.gd  inspect_collision.gd.uid  inspect_kenney.gd  inspect_kenney.gd.uid  inspect_ronin.gd  inspect_ronin.gd.uid  test_collision_gen.gd  test_collision_gen.gd.uid
(+641 files in other folders)
