[package]
name = "marduk-launcher"
version = "0.1.0"
edition = "2021"
description = "Marduk PC launcher"
authors = ["Bond <brandon@profitpivot.ca>"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "3.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
